bug importing shared particle systems from 2.79b to 2.80 #57796

Closed
opened 2018-11-12 21:42:02 +01:00 by Ruth Faminu · 8 comments

System Information
Win64 graphics card: none, CPU: Intel Core i5

Blender Version
Broken: 2.79b to 2.80-492dbae4d1a (win64)

Short description of bug
Problem importing shared particle systems from Blender 2.79 to 2.8

Exact steps for others to reproduce the error

Open the .blend file and render the first frame (not viewport render), all 4 emitters and their particles appear in the render.
Save and open the same file in 2.80 render again. This time, one of each type of emitter does not appear in the render. Upon selecting said emitters in the 3d view, one will find that "show emitter" has been unchecked in the particle settings, despite being checked in 2.79b

I've attached the .blend file I used to test, as well as a render in 2.79b and 2.80
bug test.blend

bug 2.8.png

bug 2.79b.png

**System Information** Win64 graphics card: none, CPU: Intel Core i5 **Blender Version** Broken: 2.79b to 2.80-492dbae4d1a (win64) **Short description of bug** Problem importing shared particle systems from Blender 2.79 to 2.8 **Exact steps for others to reproduce the error** Open the .blend file and render the first frame (not viewport render), all 4 emitters and their particles appear in the render. Save and open the same file in 2.80 render again. This time, one of each type of emitter does not appear in the render. Upon selecting said emitters in the 3d view, one will find that "show emitter" has been unchecked in the particle settings, despite being checked in 2.79b I've attached the .blend file I used to test, as well as a render in 2.79b and 2.80 [bug test.blend](https://archive.blender.org/developer/F5519096/bug_test.blend) ![bug 2.8.png](https://archive.blender.org/developer/F5519120/bug_2.8.png) ![bug 2.79b.png](https://archive.blender.org/developer/F5519119/bug_2.79b.png)
Author

Added subscriber: @RoseRedTiger

Added subscriber: @RoseRedTiger
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Provided File is saved in 2.8.

Could you share the file that was saved in 2.79b?

Provided File is saved in 2.8. Could you share the file that was saved in 2.79b?
Author
[bug test 2.79b.blend](https://archive.blender.org/developer/F5551527/bug_test_2.79b.blend) here

Added subscriber: @mont29

Added subscriber: @mont29

That’s some wrong logic in versioning code (that 'draw emitter' setting has moved from particles to object IDs).

That’s some wrong logic in versioning code (that 'draw emitter' setting has moved from particles to object IDs).

This issue was referenced by 1c0bc19e3f

This issue was referenced by 1c0bc19e3f55eff4bc2df4c2affb64272c5f5cb7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57796
No description provided.