Fix T57796: bad 'draw emitter' conversion, importing shared particle systems from 2.79b to 2.80

Not sure what those #ifdef's were supposed to do exactly... But one
thing is for sure, clearing that flag in particlesettings after first
encounter would prevent transferring it properly to other objects that
would use same particlesettings.